frontend/public/css/style.css
/* ... */
.donate-area .donate-fun-wrap {
    margin-left: 250px;
    margin-top: -236px;
    background-color: #50bac3;
    position: relative;
    z-index: 1;
    padding-top: 120px;
    padding-bottom: 115px;
    padding-left: 345px;
    color: #fff;
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    width: 100%;
}
.donate-area .donate-fun-wrap .fun-content {
    width: 100%;
}
.donate-area .donate-fun-wrap .fun-content .fun-item.fun-item2 {
    padding-left: 15px;
}
.donate-area .donate-fun-wrap .fun-content .fun-item i {
    font-size: 65px;
}
.donate-area .donate-fun-wrap .fun-content .fun-item h3 {
    font-size: 50px;
    line-height: 55px;
    color: #fff;
    font-weight: 800;
    margin-top: 20px;
    margin-bottom: 14px;
}

/*===================================
    BREADCRUMB AREA
=====================================*/
.breadcrumb-area {
    background-color: #f2f0ec;
    position: relative;
    z-index: 1;
    color: #424242;
}
.breadcrumb-area .breadcrumb-content {
   text-align: center;
    position: relative;
    padding-top: 110px;
    padding-bottom: 115px;
}
.breadcrumb-area .breadcrumb-content .breadcrumb__title {
    font-size: 60px;
    line-height: 60px;
    letter-spacing: 0;
    color: #424242;
    font-weight: 800;
    text-transform: capitalize;
}
.breadcrumb-area .breadcrumb-content .breadcrumb__list {
    position: absolute;
    bottom: 0;
    left: 0;
    background-color: #e36955;
    padding: 0 30px 0 35px;
    line-height: 49px;
}
.breadcrumb-area .breadcrumb-content .breadcrumb__list:after {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    top: 0;
    left: 1px;
    z-index: -1;
    background: #e36955;
    -webkit-transform-origin: bottom left;
    transform-origin: bottom left;
    -webkit-transform: skew(-12deg,0deg);
    -moz-transform: skew(-12deg,0deg);
    -ms-transform: skew(-12deg,0deg);
    -o-transform: skew(-12deg,0deg);
    transform: skew(-12deg,0deg);
    -webkit-transition: 0.3s ease-in;
    -moz-transition: 0.3s ease-in;
    -ms-transition: 0.3s ease-in;
    -o-transition: 0.3s ease-in;
    transition: 0.3s ease-in;
}

.breadcrumb-area .breadcrumb-content .breadcrumb__list li {
    font-size: 12px;
    letter-spacing: 1px;
    color: #fff;
    font-weight: 600;
    position: relative;
    padding-right: 22px;
    text-transform: uppercase;
    display: inline-block;
}
.breadcrumb-area .breadcrumb-content .breadcrumb__list li:last-child {
    padding-right: 0;
}
.breadcrumb-area .breadcrumb-content .breadcrumb__list li.active__list-item:after {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0 6px;
    font-size: 15px;
}
.breadcrumb-area .breadcrumb-content .breadcrumb__list li a {
    color: #fff;
    -webkit-transition: 0.3s ease;
    -moz-transition: 0.3s ease;
    -ms-transition: 0.3s ease;
    -o-transition: 0.3s ease;
    transition: 0.3s ease;
}
.breadcrumb-area .breadcrumb-content .breadcrumb__list li a:hover {
    color: #f1ae44;
}

/*===================================
    ENTRY AREA
=====================================*/
.entry-area {
    padding-top: 14px;
    padding-bottom: 14px;
    position: relative;
    border-bottom: 2px solid #f2f0ec;
}
.entry-area:after {
    content: "";
    position: absolute;
    display: block;
    width: 50%;
    height: 100%;
    top: 0;
    left: -110px;
    z-index: -1;
    background-color: #424242;
    -webkit-transform: skew(-12deg,0deg);
    -moz-transform: skew(-12deg,0deg);
    -ms-transform: skew(-12deg,0deg);
    -o-transform: skew(-12deg,0deg);
    transform: skew(-12deg,0deg);
}
.entry-area .entry-static-wrap .entry-static-box1 {
    padding-top: 12px;
}
.entry-area .entry-static-wrap .entry-static-box .entry__title {
    color: #fff;
    font-size: 1.3em;
    line-height: 36px;
    font-weight: 800;
    padding-right: 50px;
}
.entry-area .entry-static-wrap .entry-static-box .entry-video-img {
    position: relative;
    margin-left: -15px;
    margin-right: -15px;
}
.entry-area .entry-static-wrap .entry-static-box .entry-video-img img {
    width: 100%;
}
.entry-area .entry-static-wrap .entry-static-box .entry-video-img .video-play-btn {
    font-size: 13px;
    cursor: pointer;
    background: #f1ae44;
    color: #fff;
    font-weight: 600;
    width: 45px;
    height: 54px;
    line-height: 54px;
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: center;
    padding-left: 5px;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    display: inline-block;
    -webkit-transition: 0.3s ease-in;
    -moz-transition: 0.3s ease-in;
    -ms-transition: 0.3s ease-in;
    -o-transition: 0.3s ease-in;
    transition: 0.3s ease-in;
}
.entry-area .entry-static-wrap .entry-static-box .entry-video-img .video-play-btn:after {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
    background: #f1ae44;
    -webkit-transform-origin: bottom left;
    transform-origin: bottom left;
    -webkit-transform: skew(-12deg,0deg);
    -moz-transform: skew(-12deg,0deg);
    -ms-transform: skew(-12deg,0deg);
    -o-transform: skew(-12deg,0deg);
    transform: skew(-12deg,0deg);
    -webkit-transition: 0.3s ease-in;
    -moz-transition: 0.3s ease-in;
    -ms-transition: 0.3s ease-in;
    -o-transition: 0.3s ease-in;
    transition: 0.3s ease-in;
}
.entry-area .entry-static-wrap .entry-static-box .entry-video-img .video-play-btn:hover,
.entry-area .entry-static-wrap .entry-static-box .entry-video-img .video-play-btn:hover:after {
    background-color: #e36955;
}

/*=== entry-static-box2 ===*/
.entry-area .entry-static-wrap .entry-static-box2 {
    padding-left: 85px;
}
/* ... */

